GNOME Bugzilla – Bug 663694
GtkTreeViewAccessibleCellInfo are leaked
Last modified: 2011-11-10 13:53:04 UTC
I noticed a GtkTreeModel leak in some of my code. After loads of digging I discovered it was because of GtkTreeViewAccessibleCellInfo being leaked (they have a GtkTreeRowReference which keep a ref on the model).
Created attachment 201061 [details] [review] gtktreeviewaccessible: factor out cell_info_free()
Created attachment 201062 [details] [review] gtktreeviewaccessible: use a value_destroy_func with the cell_info_by_index hash This ensures that we don't leak any GtkTreeViewAccessibleCellInfo when re-inserting a new one with the same key.
pushed to master. Will also push to 3.2 branch after some more fixes.