gtktreeviewaccessible: factor out cell_info_free()

https://bugzilla.gnome.org/show_bug.cgi?id=663694